# orpl-backup

./: README.md  nylon.rdf  pyproject.toml  setup.cfg
demos/: demo1_importing_data.ipynb  demo2_cosmic_rays.ipynb  demo3_system_correction.ipynb  demo4_baseline_removal.ipynb  demo8_visualization.ipynb
src/orpl/: __init__.py  baseline_removal.py  cosmic_ray.py  metrics.py
src/orpl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/orpl/gui/: mplcanvas.py  orplGUI.py
tests/: .coveragerc  conftest.py  pytest.ini  test_metrics.py  test_normalization.py
tests/unit/: test_metrics.py  test_normalization.py
